--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,11 @@ python-openstackclient==6.0.0
 PyYAML~=6.0
 shortuuid~=1.0.13
 sshtunnel~=0.4.0
-sympy~=1.13
+sympy~=1.12
 seedir~=0.5.0
-cryptography~=43.0.1
-uvicorn~=0.30.6
-fastapi~=0.101.0
-pydantic~=2.9.2
+cryptography~=44.0.2
+pydantic~=2.11.3
 keystoneauth1~=5.1.0
 filelock~=3.16.1
 schema~=0.7.7
+Werkzeug==3.1.3
